fix overflow logic

--- a/src/app/history-container/history-container.component.css
+++ b/src/app/history-container/history-container.component.css
@@ -5,6 +5,8 @@
 
 .example-card {
   height: 85vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .options {
