--- a/src/app/holding-container/holding-container.component.css
+++ b/src/app/holding-container/holding-container.component.css
@@ -4,4 +4,5 @@
 }
 .example-card {
   height: 50vh;
+  overflow: auto;
 }
